# lean-shadow-fuzzer

./: .gitignore  AGENTS.md  README.md  config.example.docker-arm.toml  config.example.local.toml  config.example.toml  dashboard_db.py  dashboard_events.py  dashboard_live.py  dashboard_server.py  dashboard_time.py  generate-shadow-topology.py  pyproject.toml  requirements-fuzzer.txt  shadow-fuzzer.py
notebooks/: analysis.ipynb
scripts/: generate-genesis.sh  generate-shadow-yaml.sh  parse-vc.sh  render_notebooks.py
scripts/client-cmds/: ethlambda-cmd.sh  gean-cmd.sh  grandine-cmd.sh  lantern-cmd.sh  lighthouse-cmd.sh  nlean-cmd.sh  peam-cmd.sh  qlean-cmd.sh  ream-cmd.sh  zeam-cmd.sh
shadow_fuzzer/: __init__.py  dashboard_db.py  dashboard_events.py  dashboard_live.py  dashboard_server.py  stats_shadow.py
shadow_fuzzer/clients/: __init__.py  base.py  ethlambda.py  gean.py  lantern.py  qlean.py  zeam.py
templates/genesis/: validator-config.yaml
tests/: test_attestation_propagation.py  test_bandwidth.py  test_dashboard.py  test_gean_parser.py  test_lantern_parser.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
