[project]
name = "shadow-fuzzer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "coolname>=2.0",
    "pandas-stubs~=3.0.3",
    "pyyaml>=6.0",
]

[dependency-groups]
notebooks = [
    "jupyter>=1.0",
    "papermill>=2.6",
    "nbconvert>=7.0",
    "plotly>=5.0",
    "pandas>=2.0",
    "nbformat>=5.0",
    "networkx>=3.6.1",
]

[tool.uv]
package = false
